Picture save testing

--- a/PaintServer/appsettings.json
+++ b/PaintServer/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=WIN-60J0F8H3AKQ;database=PaintDB;Trusted_Connection=true"
+  }
 }
