add GetPictire and Іефешіешс

--- a/PaintServer/appsettings.json
+++ b/PaintServer/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=WIN-60J0F8H3AKQ;database=PaintDB;Trusted_Connection=true"
+    "DefaultConnection": "server=DESKTOP-6HV5648\\SQLEXPRESS;database=PaintDB;Trusted_Connection=true"
   }
 }
